@@ -2,5 +2,18 @@ include $(top_srcdir)/extensions/extension.am
 
 EXTENSION=base
 
-subcommands_SCRIPTS = clone delete edit load new status tasks var
-extlib_SCRIPTS = require.sh
+loader_SCRIPTS = \
+	loaders/mkdir \
+	loaders/untar
+
+subcommands_SCRIPTS = \
+	subcommands/clone \
+	subcommands/delete \
+	subcommands/edit \
+	subcommands/load \
+	subcommands/new \
+	subcommands/tasks \
+	subcommands/var \
+	subcommands/upgrade
+
+extlib_SCRIPTS = require.sh defaults.sh
