@@ -1,0 +1,12 @@
+# Simply make an empty directory.
+#
+# SYNTAX:
+#
+# SOURCES=" ...
+#   mkdir foo/bar
+# ..."
+load_mkdir() {
+    test -z "$1" && die "Must supply a directory name for 'mkdir'"
+    local dir=`join_paths "$DEV_TASK_DIR" "$1"`
+    $MKDIR -p $dir
+}
