@@ -1,29 +1,0 @@
-#! /bin/bash
-
-require base
-
-usage() {
-  echo "Display the status of the current task."
-  echo ""
-  echo "dev status [-h]"
-  echo ""
-  echo "  -h: this message"
-  exit 1
-}
-
-while getopts "h" OPT
-do
-  case $OPT in
-    h) usage ;;
-  esac
-done
-shift $((OPTIND - 1))
-
-# make sure we have a task to load
-test $# = 0 || usage
-
-if test -z "$DEV_TASK_DIR"; then
-  die "No task loaded"
-fi
-
-task_status
