@@ -1,4 +1,5 @@
 include $(top_srcdir)/extensions/extension.am
 
 EXTENSION=cvs
-extlib_SCRIPTS = require.sh
+
+loader_SCRIPTS = cvs
