@@ -1,13 +1,15 @@
-# do a CVS checkout 
-# cvs_checkout REPOSITORY MODULE DIRNAME
-cvs_checkout() {
+# do a CVS checkout.  Syntax:
+#
+# SOURCES=".. cvs REPOSITORY MODULE DIRNAME .."
+#
+load_cvs() {
     local repo module dirname parentdir
     parentdir="$DEV_TASK_DIR"
     repo="$1"
     module="$2"
     codir="$3"
 
-    test $# -eq 3 || die "cvs_checkout requires three arguments"
+    test $# -eq 3 || die "cvs loader requires three arguments"
 
     # cvs doesn't handle checking out to '.' properly, so fake it.
     if test "$codir" = "."; then
