@@ -1,0 +1,26 @@
+# Set up quilt on the designated subdirectory, or the task directory by default.  If
+# DEV_PATCH_DIR is set, points patches/ to that directory.
+# 
+# SYNTAX:
+#
+# SOURCES=".. quilt .."
+# SOURCES=".. quilt sub/dir .."
+#
+load_quilt() {
+  local destdir="${1-.}"
+
+  cd "$DEV_TASK_DIR/$destdir"
+
+  if test -n "${DEV_PATCH_DIR}"; then
+      test -e "${QUILT_PATCHES-patches}" && die "Task already has a patches/ directory"
+      ln -s "$DEV_PATCH_DIR" "${QUILT_PATCHES-patches}"
+  fi
+
+  # quilt looks for 'patches' directory and for '.pc/series'
+  test -e .pc && die "Task already has a .pc/ directory"
+  $MKDIR .pc || exit 1
+  touch .pc/series || exit 1
+
+  # 'upgrade' is the easiest way to create a new, 'empty' quilt setup
+  $QUILT upgrade 2>&1 > /dev/null || exit 1
+}
