@@ -1,6 +1,5 @@
 bin_SCRIPTS = dev
 
-frameworklibdir = $(libexecdir)/dev/framework
 dist_frameworklib_SCRIPTS = dev_functions.sh subcommand_functions.sh require.sh defaults.sh
 nodist_frameworklib_SCRIPTS = config.sh
 
