@@ -30,3 +30,20 @@ warning_countdown() {
   echo 'proceeding!' >&2
 }
 
+# Join two paths.  If the second path is relative, it is taken
+# relative to the first.  If it is absolute, then it is returned
+# intact.
+#
+# input:
+#  - $1: base directory (should be absolute)
+#  - $2: potentially relative directory
+# output:
+#  - stdout: absolute path
+join_paths() {
+    local absolute_dir="$2"
+    # TODO: convert to use 'expr'; ${..:..:..} is not portable
+    if test x"${absolute_dir:0:1}" != x"/"; then
+        absolute_dir="$1/$absolute_dir"
+    fi
+    echo "$absolute_dir"
+}
